slider/java.css
*{
    box-sizing: border-box;
    margin:0;
    padding:0;
}

    html{
        scroll-behavior: smooth;
        height:100%;
        width:100%;
    }
    body, .slide{
        height:100vh;
        width:100%;
        padding:0;
    }
    body{
        position: relative;
        margin:0;
        padding:0;
        height:100%;
        width:100%;
        /* overflow:hidden; */
    }

/* .content{
    visibility: hidden;
} */
.contentBody{
    margin:0 5em;
}

.overlay{
    display:flex;
    height:100%;
    width:100%;
    margin:0;
    justify-content:space-evenly;
    align-items:center;
    position:absolute;
  }
  
  .landPageLetters{
    height:80%;
    width:20%;
    opacity:0;
    display:flex;
    justify-content:center;
    align-items:center;
    color:white;
    font-size:5em;
  }
  
  .overlay{
    position:absolute;
    height:100%;
    width:100%;
    background:rgba(0,0,0,0.9);
    z-index:1;
    visibility:hidden;
    transform: translateY(-100%);
  }
  
  .overlayContainer{
    display:flex;
    position:fixed;
    top:0;
    height:100%;
    width:100%;
    margin:0;
    background:black;
    justify-content:space-evenly;
    background-image:url('imgs/landingpage4.jpeg');
    background-size:cover;
    background-blend-mode: color;
    background-color:rgba(0,0,0,0.8);
    align-items:center;
    font-family: Open Sans Condensed;
    z-index:100;
  }

  .enterButton{
    position:absolute;
    font-family: "Open Sans Condensed";
    z-index:2;
    padding:1.2em 2em;
    border-radius:3px;
    font-size:1em;
    border:1px solid white;
    transition:.2s ease;
    opacity:0;
  }

  .enterButton:focus{outline:0}

  .enterButton:hover{
    transform:scale(1.1);
    cursor:pointer;
    letter-spacing:.1em;
  }
   

    
    /* SlideShow */
    .slides{
        padding:0;
        overflow-x:hidden;
        width:100%;
    }
    .slide{
        background-size: cover;
        -webkit-background-size: cover;
        -moz-background-size: cover;
        -o-background-size: cover;
        background-repeat: no-repeat;
        background-position: center;
        background-blend-mode: color;
        background-color:rgba(0,0,0,0.4);
        position:absolute;
        transition: ease;
        transition-duration: .7s;
        height:100%;
        font-family: "Staatliches";
        letter-spacing:0.2em;
    }
    .slide h1{
        color:white;
        padding:3px;
    }

    .slider-1{
        background-image: url('imgs/coffee1.jpeg');

    }
    .slider-2{
        background-image: url('imgs/coffee2.jpeg');

    }
    .slider-3{
        background-image: url('imgs/coffee3.jpeg');
    }
    .slider-4{
        background-image: url('imgs/coffee4.jpeg');
    }
    .slider-5{
        background-image: url('imgs/coffee5.jpeg');
    }
    
    .slides{
        position: relative;
        height:50vh;
    }

    .right{
        transform: translateX(100%);
        position: absolute;
        top:46.9%;
        right:0;
        padding-right:.8em;
        transition: ease-in-out;
        transition-duration: .3s;
        cursor:pointer;
    }


    .left{
        transform: translateX(-100%);
        position: absolute;
        top:46.9%;
        left:0;
        padding-left:.8em;
        transition: ease-in-out;
        transition-duration: .3s;
        cursor:pointer;
    }
    .showArrow{
        transform: translateX(0);
    }
    .showImg{
        opacity:1;

    }
    .hideImg{
        opacity:0;
    }
    .java{
        display:inline-block;
        font-size:5em;
        border: 4px solid white;
        padding: 0 .3em;
        line-height: 1em;
        color:white;
        transform: translateX(.5em);
        margin-top:.3em;
    }

    .codingCafe{
        color:white;
        font-weight: lighter;
        transform: translateX(100px);
    }

/* NAVIGATION */

    .navbar {
    background: black;
    top: 0;
    width: 100%;
    height:3rem;
    transition:all 1s ease;
    position: relative;
    z-index: 1;
    z-index:1;
    position:relative;
    }

    .fixed-nav .navbar {
    position: fixed;
    z-index:10;
    box-shadow: 0 5px 0 rgba(0,0,0,0.1);
    }

    .navbar ul {
    margin: 0;
    padding: 0;
    list-style: none;
    display: flex;
    height:100%;
    }

    .navbar li {
    flex: 1;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    }

    .navbar a:hover{
        letter-spacing: 1px;
    }
    .navbar a{
        text-decoration: none;
        color:white;
        font-family: "Staatliches";
        font-weight:lighter;
        transition: .3s ease;
    }

    li.logo {
    max-width:0;
    overflow: hidden;
    background: white;
    transition: all 0.5s;
    font-weight: 600; 
    font-size: 30px;
    z-index:100;
    height:3rem;
    }
    .logo a{
        color:black;
    }

    .fixed-nav li.logo {
    max-width: 500px;
    }
/* MENU */

.menuChoice h1{
    flex-basis:100%;
}

    .menuChoice{
        display:flex;
        justify-content: space-evenly;
        box-shadow: 0 9px 38px rgba(0,0,0,0.30), 0 8px 10px rgba(0,0,0,0.22);
        border-radius:6px;
        font-family:"Staatliches";
        margin:8em auto 4em;
        width:55%;
        align-items: center;
        padding:2em;
        border-left: 1em solid;
    }
    .menuChoice span{
        padding:0 1em;
    }
    .choice{
        display:flex;
        place-items: center;
        background-color: #161616;;
        padding: 1em 2em;
        border-radius: 8px;
        cursor: pointer;
        transition: .3s ease;
    }
    .choice:hover{
        background-color: white;
        box-shadow: inset 0px 1px 5px 0px black;
    }
    
    .choice a{
        text-decoration: none;
        color:white;
        letter-spacing: 1.5px;
    }
    .choice:hover a{
        color:black;
    }


    .menuImgContainer{
        position:relative;
        /* display: flex; */
        align-items: center;
        color: white;
        justify-content: center;
    }

    .menuImg{
        max-height:200px;
        border-radius:50%;
        transition: all .3s ease;
    }
    .menuImgContainer:hover .menuImg{
        transform: scale(1.1);
        cursor: pointer;
        box-shadow: -1px 1px 17px black;
    }

    .menuImgContainer .name{
        position: absolute;
        color:white;
        top: 50%;
        left: 50%;
        transform: translate(-50%,-50%);
        font-family:'Open Sans';
        font-weight:400;
        padding: .1em .2em;
        pointer-events: none;
    }
    

/* active class for menu */
    .menu.active .menuImgContainer {
        opacity:.3;
        transform:scale(1.1);
        filter:blur(5px);
    }
    
    .menu .menuImgContainer.active {
        opacity:1;
        transform:scale(1);
        filter:blur(0);
    }


/* COLD MENU */
    .coldMenu{
        display:none;
        opacity:0.1;
        /* display:flex; */
        flex-wrap: wrap;
        justify-content: space-evenly;
        padding:0;
    }

/* HOT MENU */
    .hotMenu{
        display:none;
        /* display:flex; */
        flex-wrap: wrap;
        justify-content: space-evenly;
        padding:0;
    }

    .menu{
        margin:0 1em;
    }
/* ABOUT SECTION */
   

    .aboutContent{
        display:flex;
        justify-content: space-evenly;
        margin: 0 -5em;
        background: #000000e8;
        height:200vh;
    }


    .aboutContainer{
        position:relative;
        height:100%;
        width:70%;
    }

    .aboutSection{
        background-size:cover;
        background-repeat: no-repeat;
        background-blend-mode: color;
        background-color:rgba(0,0,0,0.5);
        height:30%;
        margin-bottom:1em;
        color:white;
        display:flex;
        flex-direction: column;
        justify-content:center;
        border-radius:3px;
    }
    
    .aboutSection h2{
        align-self:center;
        padding-bottom:1em;
        font-family:"Open Sans";
    }

    .aboutSection p{
        width:50%;
        font-family:"Lato";
    }

    .learn{
        background-image:url('imgs/landingpage3.jpeg');
        position: relative;
    }

    .aboutContent h1{
        opacity:0;
        position:absolute;
        font-family:"Open Sans";
        font-size:5em;
    }

    .learn h1{
        transform:translateX(-3em);
        transform: rotate(-90deg);
        -webkit-transform: rotate(-90deg);
        top:1.5em;
        left:-2em;
    }

    .learn h2{
        margin-left:5em;
    }

    .learn p{
        align-self: flex-end;
    }

    .collaborate{
        background-image:url('imgs/collab.jpeg');
        background-position-x: 50%;
        position:relative;
    }

    .collaborate h1{
        -webkit-transform: rotate(90deg);
        position:absolute;
        color:white;
        font-family:"Open Sans";
        top:2em;
        right: -2.3em;
    }

    
    .collaborate h2{
        align-self: flex-start;
        padding-left:1em;
    }

    .collaborate p{
        align-self: flex-start;
        padding-left:3em;
    }

    .enjoy{
        background-image: url('imgs/enjoy.jpeg');
        position:relative;
    }

    .enjoy h1{
        transform: rotate(-90deg);
        left: -1.9em;
        top: 1.7em;
    }

    .enjoy h2{
        margin-left:9em;
    }

    .enjoy p{
        align-self: flex-end;
    }

    
/* SCROLLBAR     */
    ::-webkit-scrollbar-track
    {
        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
        border-radius: 10px;
        background-color: #F5F5F5;
    }

    ::-webkit-scrollbar
    {
        width: 11px;
        background-color: #F5F5F5;
    }

    ::-webkit-scrollbar-thumb
    {
        border-radius: 10px;
        background-color:black
    }
/* MEDIA QUERIES    */

    @media(max-width:800px){
        .content{
            margin:0;
        }
        .menuChoice{
            flex-direction: column;
            width:90%;
        }
        .menuChoice h1{
            padding-bottom:.8em;
        }
        .menu{
            flex-direction:column;
            align-items: center;
        }


    }

    @media(max-width:1340px){
        .aboutContent{
            padding-top: 2em;
        }
    }

    @media(max-width:790px){
        .aboutSection h1{
            font-size:3.8em;
        }

        .enjoy h1{
            left: -1.8em;
        }

        .enjoy h2{
            margin-left: 3em;
        }

        .collaborate h1{
            right: -8.5rem;        
        }
        
        .collaborate p{
            padding-left: .8em;
        }

        .aboutSection p{
            width:95%;
        }

        .aboutContent{
            padding-top: 2em;
        }
    }
    


      

